--- a/.gitignore
+++ b/.gitignore
@@ -236,7 +236,8 @@ fabric.properties
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -600,6 +601,7 @@ pip-selfcheck.json
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+
 # User-specific stuff
 
 # AWS User-specific
@@ -698,3 +700,8 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+# Virtual enviroment folder
+*_env
+
+# Script output
+*_out
