Added Java gitignore settings

--- a/.gitignore
+++ b/.gitignore
@@ -706,3 +706,23 @@ $RECYCLE.BIN/
 # Script output
 *_out
 package-lock.json
+
+
+## Java from https://github.com/github/gitignore/blob/main/Java.gitignore
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
